--- a/build.xml
+++ b/build.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Zadanie2" default="9.1. start.tomcat">
 
+    <property name="tomcat" value="C:/Program Files/Apache Software Foundation/apache-tomcat-8.5.4"/>
+    <property name="brawser" value="C:/Program Files/Google/Chrome/Application/chrome.exe"/>
+    <property name="mysql.dir" value="D:/WORK/App/MySQLSRV"/>
+
     <property name="dest.dir" value="web/WEB-INF/classes"/>
     <property name="dir.lib" value="./lib"/>
     <property name="dir.resources" value="./src/resources"/>
     <property name="project.name" value="EatPut"/>
     <property name="build.dir" value="./web"/>
-    <property name="tomcat" value="C:/Program Files/Apache Software Foundation/apache-tomcat-8.5.4"/>
-    <property name="tomcat.webapps" value="C:/Program Files/Apache Software Foundation/apache-tomcat-8.5.4/webapps"/>
-    <property name="tomcat.bin" value="C:/Program Files/Apache Software Foundation/apache-tomcat-8.5.4/bin"/>
-    <property name="mysql.dir" value="D:/WORK/App/MySQLSRV"/>
+
+    <property name="tomcat.webapps" value="${tomcat}/webapps"/>
+    <property name="tomcat.bin" value="${tomcat}/bin"/>
+
+    <property name="host" value="http://localhost"/>
+    <property name="port" value="8080"/>
+
 
 
     <path id="common_library">
@@ -24,11 +31,12 @@
         <delete dir="${dest.dir}"/>
         <delete dir="${tomcat.webapps}/${project.name}"/>
         <delete file="${tomcat.webapps}/${project.name}.war"/>
-        <delete file="${tomcat.bin}/log_prog.txt"/>
+        <delete dir="${tomcat.webapps}/ROOT"/>
     </target>
 
     <target name="2. make_dest_dir">
         <mkdir dir="${dest.dir}"/>
+        <mkdir dir="${tomcat.webapps}/ROOT"/>
     </target>
 
     <target name="3. compile" depends="1. clear, 2. make_dest_dir">
@@ -64,11 +72,16 @@
     </target>
 
     <target name="6. copy2" depends="5. war">
-        <copy todir="${tomcat.webapps}">
+        <!--copy todir="${tomcat.webapps}">
             <fileset dir="./">
                 <include name="*.war"/>
             </fileset>
+        </copy-->
+        <!--Put in to ROOT-->
+        <copy todir="${tomcat.webapps}/ROOT">
+            <fileset dir="${build.dir}"/>
         </copy>
+
     </target>
 
     <!--Для работы с MySQL-->
@@ -89,13 +102,6 @@
     </target>
     <!---->
 
-    <target name="8. mylog.open">
-        <exec executable="notepad" spawn="true">
-            <arg value="${tomcat.bin}/log_prog.txt"/>
-        </exec>
-        <!--spawn=”true” (выполнение задачи в отдельном потоке)-->
-    </target>
-
     <target name="9. debug.tomcat" depends="6. copy2, 7.1. MySQL.start">
         <exec executable="cmd" dir="${tomcat.bin}">
             <arg value="/c"/>
@@ -112,6 +118,14 @@
         <exec executable="cmd" dir="${tomcat.bin}">
             <arg value="/c"/>
             <arg value="shutdown.bat"/>
+        </exec>
+    </target>
+
+    <target name="9.4. start.browser(ROOT)" depends="9.1. start.tomcat">
+        <exec executable="cmd" dir="${tomcat.bin}">
+            <arg value="/c"/>
+            <arg value="${brawser}"/>
+            <arg value="${host}:${port}/"/>
         </exec>
     </target>
 
