--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=INFO, file
 # Апендер для работы с файлами
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 # Путь где будет создаваться лог файл
-log4j.appender.file.File=D:\\TMP\\log_file - EatPut.log
+log4j.appender.file.File=${catalina.base}/logs/log_file - EatPut.log
 # Указываем максимальный размер файла с логами
 log4j.appender.file.MaxFileSize=1MB
 # Конфигурируем шаблон вывода логов в файл
